swapped margin with padding to avoid overflow, changed color of scrollbar

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -150,7 +150,7 @@
 
 /* Hover state for Firefox */
 .scrollContainer:hover {
-  scrollbar-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4)) transparent;
+  scrollbar-color: light-dark(var(--mantine-color-lightscale-8), var(--mantine-color-gray-4)) transparent;
 }
 
 /* WebKit (Chrome, Safari, newer Edge) scrollbar styles */
@@ -170,10 +170,10 @@
 
 /* Show scrollbar on hover */
 .scrollContainer:hover::-webkit-scrollbar-thumb {
-  background-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4));
+  background-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-gray-5));
 }
 
 /* Darker color when hovering directly over the scrollbar */
 .scrollContainer:hover::-webkit-scrollbar-thumb:hover {
-  background-color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-3));
+  background-color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-gray-3));
 }
